--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body {
+        background-image: linear-gradient(to bottom right,rgba(255, 255, 0, 0.507), rgba(128, 0, 0, 0.685)); min-height: 100%;
+        min-height: 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        margin: 0;
+      }
+    </style>
   </head>
-  <body style="background-image: linear-gradient(to bottom right,rgba(255, 255, 0, 0.507), rgba(128, 0, 0, 0.685)); min-height: 100%;" >
+  <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
